fix footer structure, disable scaling on mobile

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -2,24 +2,20 @@
   margin-top: 70px;
 }
 
-.footer__wrap-desk {
+.footer-inner {
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
 
-.footer__wrap-mobile {
-  display: none;
-}
-
-.footer__desk-cols {
+.footer-desk-cols {
   max-width: 727px;
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
 
-.footer__desk-col {
+.footer-desk-col {
   width: 100%;
   max-width: 189px;
   display: flex;
@@ -47,6 +43,10 @@
   &:hover {
     color: var(--red1);
   }
+}
+
+.footer-mobile {
+  display: none;
 }
 
 .newsletter {
@@ -142,15 +142,7 @@
   }
 }
 
-.newsletter_desk {
-  display: flex;
-}
-
-.newsletter_mobile {
-  display: none;
-}
-
-.ftr-bottom-desk {
+.footer-bottom-desk {
   display: flex;
   justify-content: center;
   margin-top: 112px;
@@ -168,11 +160,7 @@
   }
 }
 
-.ftr-mobile-drpds {
-  display: none;
-}
-
-.ftr-bottom-mobile {
+.footer-bottom-mobile {
   display: none;
 }
 
@@ -201,29 +189,33 @@
   color: var(--green);
 }
 
+.footer-mobile-soc {
+  display: none;
+}
+
 @media screen and (max-width: 1160px) {
-  .ftr-bottom-desk {
+  .footer-bottom-desk {
     margin-top: 50px;
     margin-bottom: 0;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .footer__wrap-desk {
+  .footer-inner {
+    flex-direction: column-reverse;
+  }
+
+  .footer-desk-cols {
     display: none;
   }
 
-  .footer__wrap-mobile {
+  .footer-mobile {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 70px;
   }
 
-  .newsletter_desk {
-    display: none;
-  }
-
-  .newsletter_mobile {
+  .newsletter {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -240,11 +232,11 @@
     }
   }
 
-  .footer__desk-cols {
+  .footer-desk-cols {
     display: none;
   }
 
-  .ftr-mobile-drpds {
+  .footer-mobile-drpds {
     display: flex;
     flex-direction: column;
     margin-top: 75px;
@@ -308,7 +300,7 @@
     text-transform: uppercase;
   }
 
-  .ftr-mobile-soc {
+  .footer-mobile-soc {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -316,13 +308,13 @@
     margin: 20px 0 10px 0;
   }
 
-  .ftr-mobile-soc__item {
+  .footer-mobile-soc__item {
     display: flex;
     padding: 8px;
     margin: 10px;
   }
 
-  .ftr-mobile-soc__link {
+  .footer-mobile-soc__link {
     svg {
       display: flex;
       width: 20px;
@@ -330,11 +322,11 @@
     }
   }
 
-  .ftr-bottom-desk {
+  .footer-bottom-desk {
     display: none;
   }
 
-  .ftr-bottom-mobile {
+  .footer-bottom-mobile {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
